# MissingPlusPlus

./: .gitignore  AGENTS.md  README.md
.github/workflows/: release.yml  test.yml
MissingPlusPlus/: Info.plist  MissingPlusPlus.entitlements  MissingPlusPlusApp.swift
MissingPlusPlus.xcodeproj/: project.pbxproj
MissingPlusPlus/Models/: Intensity.swift  (+5 more)
MissingPlusPlusTests/: ActiveStateControllerTests.swift  AppPreferencesKeychainTests.swift  AppPreferencesUpdateCheckTests.swift  HotKeyControllerTests.swift  MenuBuilderTests.swift  NotificationServiceTests.swift  StatusPanelControllerTests.swift  UpdateCheckerTests.swift  UpdateDownloaderTests.swift  UpdateInstallerTests.swift  WindowControllerTests.swift
docs/: ci.md
missingpp-tauri/: .gitignore  AGENTS.md  Dockerfile.dev  README.md  docker-compose.dev.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  wrangler.toml
missingpp-tauri/src-tauri/: Cargo.toml  tauri.conf.json
missingpp-tauri/src-tauri/icons/: icon.icns
missingpp-tauri/src-tauri/src/: error.rs  lib.rs  main.rs
missingpp-tauri/src-tauri/src/commands/: mod.rs  notifications.rs  records.rs  storage.rs  updater.rs
missingpp-tauri/src-tauri/src/data/: mod.rs  model.rs  persistence.rs  preferences.rs  store.rs
missingpp-tauri/src-tauri/src/frontend/: installer.rs  manifest.rs
missingpp-tauri/src-tauri/src/platform/: macos.rs  mod.rs
missingpp-tauri/src-tauri/tests/: e2e_write.rs
scripts/: build-dmg.sh  build-with-sparkle.sh  build_and_run.sh  make-icons.py  patch-pbxproj.py  run_tests.sh
(+67 files in other folders)
